# mlflow-deployment

./: .dockerignore  .gitignore  Makefile  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
docker/scripts/: run-server.sh
scripts/: create-server.sh  startup-script.sh
test/: server-connect.py
