[tool.poetry]
name = "mlflow-deployment"
version = "0.1.0"
description = ""
authors = ["Abhipreet <abhipreets2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "==2.5.0"
google-cloud-storage = "~=2.10.0"
psycopg2-binary = "~=2.9.6"

[build-system]
requires = ["setuptools","poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"